--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ distlib==0.3.0
 distro==1.4.0
 dj-database-url==0.5.0
 Django==3.1.3
+django-bulk-admin==0.1.1
+django-cors-headers==3.5.0
 django-heroku==0.3.1
 django-storages==1.10.1
 djangorestframework==3.12.2
